--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;900&display=swap');
+
 BODY {
     font-family : calbiri ;
     font-size : 10pt;
-
 }
 p {
     margin-top: 0;
@@ -9,19 +10,19 @@ p {
 }
 
 A {
-    text-decoration: underline;
-    color: #6600CC;
+    color: #c0bac4;
+    text-decoration:none;
 }
 
 A:Hover {
-    text-decoration: underline;
-    color: #CC0066;
+    color: #338;
+    text-decoration:none;
 }
 
 h1 {
     margin: 1em 0 0.5em 0;
     font-weight: 300;
-    font-family: 'Titillium Web', sans-serif;
+    font-family: poppins;
     position: relative;
     font-size: 21px;
     line-height: 30px;
@@ -40,22 +41,23 @@ h2 {
     font-weight: normal;
     position: relative;
     text-shadow: 0 -1px rgba(0,0,0,0.6);
-    font-size: 18px;
-    line-height: 40px;
+    font-size: 8px;
+    text-align: center;
+    line-height: 20px;
     background: #355681;
     background: rgba(53,86,129, 0.8);
-    border: 1px solid #fff;
-    padding: 5px 15px;
+    /* border: 1px solid #fff;
+    padding: 5px 15px; */
     color: white;
     border-radius: 0 10px 0 10px;
     box-shadow: inset 0 0 5px rgba(53,86,129, 0.5);
-    font-family: 'Muli', sans-serif;
+    font-family: poppins;
 }
 
 h3 {
     margin: 1em 0 0.5em 0;
     font-weight: 600;
-    font-family: 'Titillium Web', sans-serif;
+    font-family: poppins;
     position: relative;
     text-shadow: 0 -1px 1px rgba(0,0,0,0.4);
     font-size: 15px;
@@ -66,14 +68,25 @@ h3 {
 }
 
 h4 {
-    margin: 1em 0 0.5em 0;
     font-weight: 600;
-    font-family: 'Titillium Web', sans-serif;
+    font-family: poppins;
     position: relative;
-    font-size: 12px;
+    font-size: 18px;
     line-height: 20px;
-    color: #788699;
-    font-family: 'Muli', sans-serif;
+    color: #338;
+    font-family: poppins;
+    font-weight: 200;
+}
+
+h5 {
+    font-weight: 600;
+    font-family: poppins;
+    text-align: center;
+    font-size: 18px;
+    line-height: 20px;
+    color: #338;
+    font-family: poppins;
+    font-weight: 200;
 }
 
 
@@ -85,6 +98,7 @@ frame {
     padding : 0px 0px 0px 0px;
 }
 
+/* this is for the pagination footer */
 ul {
     margin: 0;
     padding: 0;
@@ -106,34 +120,85 @@ ul li a:visited {
 
 ul li a:hover, ul li  {
     color: white;
-    background-color: #675FD3      ;
+    /* background-color: #338      ; */
 }
 
-table
+table.table1
 {
-    font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+    font-family: poppins;
     font-size: 12px;
-    background: #fff;
+    background: #ffffff;
     border-collapse: collapse;
+    margin-left: auto; 
+    margin-right: auto;
+    box-shadow: 1px 1px 1px 1px #cbced1;
+    border-radius: 15px;
+    width: 100%
+    
+}
+
+table.table2
+{
+    font-family: poppins;
+    font-size: 12px;
+    background: #ffffff;
+    border-collapse: collapse;
+    margin-left: auto; 
+    margin-right: auto;
+    box-shadow: 1px 1px 1px 1px #cbced1;
+    border-radius: 15px;
+    width: 70%
 
 }
+
+table.table3
+{
+    font-family: poppins;
+    font-size: 12px;
+    background: #ffffff;
+    border-collapse: collapse;
+    margin-left: auto; 
+    margin-right: auto;
+    box-shadow: 1px 1px 1px 1px #cbced1;
+    border-radius: 15px;
+    width: 110%
+
+}
+
+table.table4
+{
+    font-family: poppins;
+    font-size: 12px;
+    background: #ffffff;
+    border-collapse: collapse;
+    margin-left: auto; 
+    margin-right: auto;
+    box-shadow: 1px 1px 1px 1px #cbced1;
+    border-radius: 15px;
+    width: 50%
+
+}
+
 th
 {
     font-size: 14px;
     font-weight: normal;
-    color: #039;
+    color: #338;
     padding: 10px 8px;
     border-bottom: 2px solid #6678b1;
+    text-align: center;
 }
 td
 {
     color: #669;
     padding: 9px 8px 0px 8px;
+    text-align: center;
 
 }
+
 tbody tr:hover td
 {
-    color: #009;
+    color: #338;
 }
 
 
@@ -201,7 +266,7 @@ input[type="color"]:focus,
 select:focus,
 textarea:focus {
     outline: 0;
-    border-color: #129FEA;
+    border-color: #338;
 }
 
 /*
@@ -210,20 +275,20 @@ since IE8 won't execute CSS that contains a CSS3 selector.
 */
 input:not([type]):focus {
     outline: 0;
-    border-color: #129FEA;
+    border-color: #338;
 }
 
 input[type="file"]:focus,
 input[type="radio"]:focus,
 input[type="checkbox"]:focus {
-    outline: thin solid #129FEA;
-    outline: 1px auto #129FEA;
+    outline: thin solid #338;
+    outline: 1px auto #338;
 }
 select {
     /* Normalizes the height; padding is not sufficient. */
     height: 2.25em;
     border: 1px solid #ccc;
-    background-color: white;
+    background-color:  #ecf0f3;
 }
 select[multiple] {
     height: auto;
@@ -245,7 +310,7 @@ legend {
     border-bottom: 1px solid #e5e5e5;
 }
 
-button {
+/* button {
     font-family: inherit;
     font-size: 100%;
     padding: 0.5em 1em;
@@ -254,29 +319,28 @@ button {
     background-color: #E6E6E6;
     text-decoration: none;
     border-radius: 2px;
-}
+} */
 
 button:hover,
 button:focus {
-    background-image: linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
-}
-button:focus {
-    outline: 0;
-}
-button:active {
-    box-shadow: 0 0 0 1px rgba(0,0,0, 0.15) inset, 0 0 6px rgba(0,0,0, 0.20) inset;
-    border-color: #000;
+    background-image: linear-gradient(transparent, #338 40%, #338 );
+    box-shadow: none;
 }
 
-button-disabled
-{
+button {
     border: none;
-    background-image: none;
-    opacity: 0.40;
-    cursor: not-allowed;
-    box-shadow: none;
-    pointer-events: none;
-}
+    color: white;
+    padding: 4px 8px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    box-shadow: 1px 1px 1px #cbced1, -1px -1px 1px white;
+    transition: 0.5s;
+  }
+
 
 hr {
     display: block;
@@ -290,21 +354,27 @@ hr {
 
 .navbar {
     overflow: hidden;
-    background-color: #333;
+    background-color: rgb(183, 48, 48);
+    /* width: 100%; */
+    font-family: poppins;
 }
 
 .navbar a {
     float: left;
     font-size: 16px;
-    color: white;
+    color:white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    width: 12%;
+    font-family: poppins;
+    
 }
 
 .subnav {
     float: left;
     overflow: hidden;
+    font-family: poppins;
 }
 
 .subnav .subnavbtn {
@@ -314,27 +384,28 @@ hr {
     color: white;
     padding: 14px 16px;
     background-color: inherit;
-    font-family: inherit;
+    font-family: poppins;
     margin: 0;
 }
 
 .navbar a:hover, .subnav:hover .subnavbtn {
-    background-color: #338;
+    background-image: linear-gradient(transparent, #338 40%, #338 );
 }
 
 .subnav-content {
     display: none;
     position: absolute;
     left: 0;
-    background-color: #333;
+    background-color: rgb(68, 56, 56);
     width: 100%;
-    z-index: 1;
+    z-index: 5;
 }
 
 .subnav-content a {
     float: left;
     color: white;
     text-decoration: none;
+    width: 20%;
 }
 
 .subnav-content a:hover {
@@ -346,3 +417,99 @@ hr {
     display: block;
 }
 
+/* This is for manager pending */
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700');
+
+body {
+  padding: -20px;
+}
+.tabinator {
+  background: #fff;
+  padding: 30px;
+  font-family: poppins;
+}
+.tabinator h2 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+.tabinator input {
+  display: none;
+}
+.tabinator label {
+  box-sizing: border-box;
+  display: inline-block;
+  padding: 15px 25px;
+  color: #ccc;
+  margin-bottom: -1px;
+  margin-left: -1px;
+}
+.tabinator label:before {
+  content:'';
+  display:block;
+  width:100%;
+  height:15px;
+  position:absolute;
+  bottom:-11px;
+  left:0;
+  z-index:10;  
+}
+.tabinator label:hover {
+  color: #888;
+  cursor: pointer;
+}
+.tabinator input:checked + label {
+  position: relative;
+  color: white;
+  background: rgb(183, 48, 48);
+  border: 1px solid rgb(183, 48, 48);
+  border-bottom: 1px solid #bbb;
+  border-radius: 5px 5px 0 0;
+}
+.tabinator input:checked + label:after {
+  display: block;
+  content: '';
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  box-shadow: 0 0 15px #939393;
+}
+#content1, #content2, #content3, #content4 {
+  display: none;
+  border-top: 1px solid #bbb;
+  padding: 15px;
+}
+#tab1:checked ~ #content1,
+#tab2:checked ~ #content2,
+#tab3:checked ~ #content3,
+#tab4:checked ~ #content4 {
+  display: block;
+  box-shadow: 0 0 12px #939393;
+}
+
+
+/* footer{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #111;
+    height: 10px;
+    width: 100%;
+    padding-top: 40px;
+    color: #fff;
+} */
+
+.footer-content{
+    font-family: poppins;
+    /* background-color: lightgray; */
+    clear: both;
+    position: relative;
+    bottom: -100px;
+    height: 20px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
