--- a/src/main/resources/templates/employee-list.html
+++ b/src/main/resources/templates/employee-list.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
-  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
-  crossorigin="anonymous">
-  <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-  <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script type="text/javascript" th:src="@{/DataTable/jquery.min.js}" ></script>
+  <script type="text/javascript" th:src="@{/DataTable/datatables.min.js}" ></script>
+  <link rel="stylesheet" type="text/css" th:href="@{/DataTable/datatables.min.css}"/>
 
 <head th:replace="fragments/layout.html :: html_head"/>
 
@@ -14,33 +11,36 @@
   <div th:replace="fragments/layout.html :: header"/> 
 
   
-<div align="left" class="container my-2">
-  <h3>Employee List page</h3>
-  <a th:href="@{/admin/employee/create}" class="btn btn-primary">Add Employee</a>
-  <a th:href="@{/admin/employee/export/csv}"><i class=" btn btn-dark px-4">Generate Report</i></a>
+  <div class = "tabinator">
+    <input type = "radio" id = "tab1" name = "tabs" checked>
+    <label for = "tab1">Employee List</label>
+    <label for = "tab2"><a th:href="@{/admin/employee/create}">Add Employee</span></a></label>
+    <label for = "tab3"><a th:href="@{/admin/employee/export/csv}">Generate Report</span></a></label>
+    <div id = "content1">
+        <div>
+            <h4>List of Employee</h4>
+        </div>
 
   <div th:if="${not #lists.isEmpty(employees)}" >
+
     
-    <table style="border: 1" class="table table-striped table-responsive-md">
-      <tr class="listHeading">
-        <th><a th:href="@{'/admin/employee/list/page/' + ${currentPage} + '?sortField=name&sortDir=' + ${reverseSortDir}+'&pageSize='+${pageSize}}">
+    <table class="table1">
+        <th><a style="color: #338" th:href="@{'/admin/employee/list/page/' + ${currentPage} + '?sortField=name&sortDir=' + ${reverseSortDir}+'&pageSize='+${pageSize}}">
         <span th:text="#{fieldLabel.employeeName}">
-        </span></a></th>
-        <th><a th:href="@{'/admin/employee/list/page/' + ${currentPage} + '?sortField=managerId&sortDir=' + ${reverseSortDir}+'&pageSize='+${pageSize}}">
+        </span></a><i class="fa fa-caret-down"></i></th>
+        <th><a style="color: #338" th:href="@{'/admin/employee/list/page/' + ${currentPage} + '?sortField=managerId&sortDir=' + ${reverseSortDir}+'&pageSize='+${pageSize}}">
         <span th:text="#{fieldLabel.managerId}">
-        </span></a></th>
+        </span></a><i class="fa fa-caret-down"></i></th>
         <th><span th:text="#{fieldLabel.status}"></span></th>
         <th><span>Action</span></th>
         
       </tr>
-      <tr th:each="employee : ${employees}" class="listRecord">
+      <tr th:each="employee : ${employees}">
         <td align="left" th:text="${employee.name}">Employee Id</td>
         <td align="left" th:text="${employee.managerId}">Manager Id</td>
         <td align="left" th:text="${employee.status}">Name</td>
-        <td><a th:href="@{/admin/employee/edit/}+${employee.employeeId}" class="btn btn-info"><span
-              th:text="#{caption.edit}"></span></a>
-        <a th:href="@{/admin/employee/delete/}+${employee.employeeId}" class="btn btn-danger"><span
-              th:text="#{caption.delete}"></span></a></td>
+        <td><a th:href="@{/admin/employee/edit/}+${employee.employeeId}"><i class="fa fa-pencil" style="font-size:18px"></i></span></a>
+        <a th:href="@{/admin/employee/delete/}+${employee.employeeId}"> <i class="fa fa-trash-o" style="font-size:18px"></i></span></a></td>
       </tr>
     </table>
     <div th:if = "${totalPages > 1}">
@@ -54,11 +54,9 @@
           </div>
           <div class="col-sm-1">
             <a th:if="${currentPage < totalPages}" th:href="@{'/admin/employee/list/page/' + ${currentPage + 1}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} +'&pageSize='+${pageSize}}">Next</a>
-            <span th:unless="${currentPage < totalPages}">Next</span>
-          </div>
-          <div class="col-sm-1">
+            <span th:unless="${currentPage < totalPages}">Next>></span>&nbsp;&nbsp;&nbsp;
             <a th:if="${currentPage < totalPages}" th:href="@{'/admin/employee/list/page/' + ${totalPages}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} +'&pageSize='+${pageSize}}">Last</a>
-            <span th:unless="${currentPage < totalPages}">Last</span>
+            <span th:unless="${currentPage < totalPages}">Last>></span>
           </div>
           <div class="col-sm-1">
             <!-- th:onchange="'window.location.href = \'' + @{/admin/employee/list/page/1?sortField=employeeId&sortDir=asc} + '&pageSize=\' + this.value '" -->
