--- a/src/main/resources/templates/user-list.html
+++ b/src/main/resources/templates/user-list.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
-integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
-crossorigin="anonymous">
-<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script type="text/javascript" th:src="@{/DataTable/jquery.min.js}" ></script>
+  <script type="text/javascript" th:src="@{/DataTable/datatables.min.js}" ></script>
+  <link rel="stylesheet" type="text/css" th:href="@{/DataTable/datatables.min.css}"/>
 
 <head th:replace="fragments/layout.html :: html_head"/>
+
 <body>
   <div th:replace="fragments/layout.html :: menu"/>
   <div th:replace="fragments/layout.html :: header"/> 
-<div align="left" class="container my-2">
-  <h3>User List page</h3>
-  <a th:href="@{/admin/user/create}" class="btn btn-primary">Add User</a>
-  <a th:href="@{/admin/user/export/csv}"><i class=" btn btn-dark px-4">Generate Report</i></a>
+
+  <div class = "tabinator">
+    <input type = "radio" id = "tab1" name = "tabs" checked>
+    <label for = "tab1">User List</label>
+    <label for = "tab2"><a th:href="@{/admin/user/create}">Add User</span></a></label>
+    <label for = "tab3"><a th:href="@{/admin/user/export/csv}">Generate Report</span></a></label>
+    <div id = "content1">
+        <div>
+            <h4>User List</h4>
+        </div>
   <div th:if="${not #lists.isEmpty(userList)}">
 
-    <table style="border: 1" class="table table-striped table-responsive-md">
+    <table class="table1">
       <thead>
         <tr class="listHeading">
-          <th><a th:href="@{'/admin/user/list/page/' + ${currentPage} + '?sortField=userId&sortDir=' + ${reverseSortDir}+'&pageSize='+${pageSize}}">
-          <span th:text="#{fieldLabel.userId}"></span></a></th>
-          <th><a th:href="@{'/admin/user/list/page/' + ${currentPage} + '?sortField=username&sortDir=' + ${reverseSortDir}+'&pageSize='+${pageSize}}">
-             <span th:text="#{fieldLabel.username}"></span>
-          </a>
-           </th>
-          <th><a th:href="@{'/admin/user/list/page/' + ${currentPage} + '?sortField=password&sortDir=' + ${reverseSortDir}+'&pageSize='+${pageSize}}">
-            <span th:text="#{fieldLabel.password}"></span></th>
+          <th><a style="color: #338" th:href="@{'/admin/user/list/page/' + ${currentPage} + '?sortField=userId&sortDir=' + ${reverseSortDir}+'&pageSize='+${pageSize}}">
+          <span th:text="#{fieldLabel.userId}"></span></a><i class="fa fa-caret-down"></i></th>
+          <th><a style="color: #338" th:href="@{'/admin/user/list/page/' + ${currentPage} + '?sortField=username&sortDir=' + ${reverseSortDir}+'&pageSize='+${pageSize}}">
+             <span th:text="#{fieldLabel.username}"></span><i class="fa fa-caret-down"></i></a></th>
+          <th><a style="color: #338" th:href="@{'/admin/user/list/page/' + ${currentPage} + '?sortField=password&sortDir=' + ${reverseSortDir}+'&pageSize='+${pageSize}}">
+            <span th:text="#{fieldLabel.password}"></span><i class="fa fa-caret-down"></i></th>
           </a>
             
-          <th><a th:href="@{'/admin/user/list/page/' + ${currentPage} + '?sortField=joinDate&sortDir=' + ${reverseSortDir}+'&pageSize='+${pageSize}}">
-            <span th:text="#{fieldLabel.JoinDate}"></span></th>
+          <th><a style="color: #338" th:href="@{'/admin/user/list/page/' + ${currentPage} + '?sortField=joinDate&sortDir=' + ${reverseSortDir}+'&pageSize='+${pageSize}}">
+            <span th:text="#{fieldLabel.JoinDate}"></span><i class="fa fa-caret-down"></i></th>
           </a>
           <th><span>Action</span></th>
           
@@ -37,16 +41,14 @@ crossorigin="anonymous">
       </thead>
       <tbody>
 
-        <tr th:each="user : ${userList}" class="listRecord">
+        <tr th:each="user : ${userList}">
           <td th:text="${user.userId}"></td>
           <td th:text="${user.username}"></td>
           <td th:text="${user.password}"></td>
           <td th:text="${user.JoinDate}"></td>
 
-          <td><a th:href="@{/admin/user/edit/}+${user.userId}"
-            class="btn btn-info"><span th:text="#{caption.edit}"></span></a>
-          <a th:href="@{/admin/user/delete/}+${user.userId}"
-            class="btn btn-danger"><span th:text="#{caption.delete}"></span></a></td>
+          <td><a th:href="@{/admin/user/edit/}+${user.userId}"><i class="fa fa-pencil" style="font-size:18px"></i></span></a>
+          <a th:href="@{/admin/user/delete/}+${user.userId}"><i class="fa fa-trash-o" style="font-size:18px"></i></span></a></td>
         </tr>
       </tbody>
     </table>
@@ -62,9 +64,7 @@ crossorigin="anonymous">
           </div>
           <div class="col-sm-1">
             <a th:if="${currentPage < totalPages}" th:href="@{'/admin/user/list/page/' + ${currentPage + 1}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} +'&pageSize='+${pageSize}}">Next</a>
-            <span th:unless="${currentPage < totalPages}">Next</span>
-          </div>
-          <div class="col-sm-1">
+            <span th:unless="${currentPage < totalPages}">Next>></span>&nbsp;&nbsp;&nbsp;
             <a th:if="${currentPage < totalPages}" th:href="@{'/admin/user/list/page/' + ${totalPages}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} +'&pageSize='+${pageSize}}">Last</a>
             <span th:unless="${currentPage < totalPages}">Last</span>
           </div>
