--- a/src/main/resources/templates/OutDated.html
+++ b/src/main/resources/templates/OutDated.html
@@ -20,7 +20,7 @@
         <h5>You can no longer edit or cancel this leave as it is already outdated.</h5>
 
     <div style="text-align: center;">
-        <button type="submit" value="Back" onclick="history.back()">Return to Form</button>
+        <button type="submit" value="Back" onclick="history.back()">Back</button>
     </div>
 
     <div th:replace="fragments/layout.html :: footer" />
