--- a/src/main/resources/templates/compensationRequestDetail.html
+++ b/src/main/resources/templates/compensationRequestDetail.html
@@ -58,7 +58,7 @@
 </br>
 
         <div style="text-align: center;">
-            <button type="submit" value="Back" onclick="history.back()">Return to Claim History</button>
+            <button type="submit" value="Back" onclick="history.back()">Back</button>
         </div>
     
    
