--- a/src/main/resources/templates/leavetype-edit.html
+++ b/src/main/resources/templates/leavetype-edit.html
@@ -1,34 +1,100 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
-<head>
+	<head th:replace="fragments/layout.html :: html_head" />
 <title>Edit Leave Type</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
-integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
-crossorigin="anonymous">
+
+<style>
+
+    #main {
+      display: flex;
+      justify-content: center;
+      padding-top: 2%;
+    }
+      </style>
+
 </head>
 <body>
 	<div class="container">
-		<h2>Edit Leave Type</h2>
-		<hr/>
-		<form th:action="@{/admin/leavetype/edit/} + ${leavetype.leaveTypeName}" th:object="${leavetype}" method="POST">
-			<input type="text" th:field="*{leaveTypeName}" class="form-control col-4 mb-4" 
-			placeholder="Enter Leave Type Name" readonly />
-            <span th:if="${#fields.hasErrors('leaveTypeName')}"
-            th:errors="*{leaveTypeName}"></span>
-			<input type="number" th:field="*{leavePeriod}" class="form-control col-4 mb-4" placeholder="Enter Leave Type Period" />
-            <span th:if="${#fields.hasErrors('leavePeriod')}"
-            th:errors="*{leavePeriod}"></span>
-			<input type="text" th:field="*{description}" class="form-control col-4 mb-4" placeholder="Enter Description" />
-            <span th:if="${#fields.hasErrors('description')}"
-            th:errors="*{description}"></span>
-            
 
-            <br/>
-			<button class="btn btn-primary" type="submit">Save</button>
-			<button class="btn btn-dangerous" type="reset">Reset</button>
+		<div th:replace="fragments/layout.html :: header" />
+		<div th:replace="fragments/layout.html :: menu" />
+
+		<div id="main">
+			<h4>Edit Leave Type</h4>
+		</div>
+
+		<table class="table4">
+		<form th:action="@{/admin/leavetype/edit/} + ${leavetype.leaveTypeName}" th:object="${leavetype}" method="POST">
+
+			<tr>
+				<th>Leave Type Name</th>
+				<td>
+					<input type="text" th:field="*{leaveTypeName}" class="form-control col-4 mb-4" 
+					placeholder="Enter Leave Type Name" readonly />
+				</td>
+			</tr>
+
+			<tr>
+				<td></td>
+				<td style='color:red'>
+					<span th:if="${#fields.hasErrors('leaveTypeName')}"
+					th:errors="*{leaveTypeName}"></span>
+				</td>
+
+			</tr>
+
+			<tr>
+				<th>Leave Period</th>
+				<td>
+					<input type="number" th:field="*{leavePeriod}" class="form-control col-4 mb-4" placeholder="Enter Leave Type Period" />
+				</td>
+
+			</tr>
+
+			<tr>
+				<td></td>
+				<td style='color:red'>
+					<span th:if="${#fields.hasErrors('leavePeriod')}"
+            		th:errors="*{leavePeriod}"></span>
+				</td>
+
+			</tr>
+
+			<tr>
+				<th>Description</th>
+				<td>
+					<input type="text" th:field="*{description}" class="form-control col-4 mb-4" placeholder="Enter Description" />
+				</td>
+			</tr>
+
+			<tr >
+				<td></td>
+				<td style='color:red'>
+					<span th:if="${#fields.hasErrors('description')}"
+					th:errors="*{description}"></span>
+				</td>
+			</tr>
+
+			<tr>
+				<td></td>
+				<td>
+					<button class="btn btn-primary" type="submit">Update</button>
+				</td>
+
+			</tr>
 			
 		</form>
-		<hr/>
-		<a th:href="@{/admin/leavetype/list}">Back To List</a>
+		</table>
+
+		<!-- <a th:href="@{/admin/leavetype/list}">Back To List</a> -->
+		<br>
+
+	</br>
+
+		<div style="text-align: center;">
+            <button type="submit" value="Back" onclick="history.back()">Back</button>
+        </div>
 	</div>
+
+	<div th:replace="fragments/layout.html :: footer" />
 </body>
 </html>
