--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -152,7 +152,7 @@ body {
                 <td></td>
                 <td colspan="2">
                     <!-- for login message -->
-                    <span th:if="${loginMessage != null}" th:text="${loginMessage}"></span>
+                    <p style='color:red'><span th:if="${loginMessage != null}" th:text="${loginMessage}"></span></p>
                 </td>
             </tr>
         </table>
