--- a/src/main/resources/templates/claimLeave.html
+++ b/src/main/resources/templates/claimLeave.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/layout.html :: html_head" />
-<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">>    -->
 
 
 <style>
@@ -31,32 +30,57 @@
             <tr>
                 <th>OT Start Time</th>
                 <td><input type="datetime-local" th:field="*{OTstartTime}" class="form-control" /></td>              
+               
+            </tr>
+
+            <tr>
+                <td></td>
                 <td style='color:red'><span th:if="${#fields.hasErrors('OTstartTime')}" th:errors="*{OTstartTime}"></span> </td>
+                
             </tr>
 
             <tr>
                 <th>OT End Time</th>
                 <td><input type="datetime-local" th:field="*{OTendTime}" /></td>
+               
+            </tr>
+
+            <tr>
                 <td></td>
                 <td style='color:red'><span th:if="${#fields.hasErrors('OTendTime')}" th:errors="*{OTendTime}"></span></td>
+
             </tr>
 
             <tr>
                 <th>Description</th>
                 <td><textarea maxlength="200" type="uText" th:field="*{description}" placeholder="Please write your description here"/></textarea>              
+                
+            </tr>
+
+            <tr>
                 <td></td>
                 <td style='color:red'><span th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></span></td>
             </tr>
             
-            <tr><td>
+            <tr>
+                <td></td>
+                <td>
                 <button type="submit" class = "btn btn-primary btn-sm">Create</button>
-                <button type="reset" class = "btn btn-primary btn-sm">Reset</button>
-<!-- 
-                <input type="submit" value="Create" class="blcass" />
-                <input type="reset" value="Reset" class="blcass" /> -->
-            </td></tr>
+                </td>
+             </tr>
+
+             <tr>
+                <td></td>
+             </tr>
             
         </table>
+
+        <br>
+        </br>
+
+        <div style="text-align: center;">
+            <button type="submit" value="Back" onclick="history.back()">Back</button>
+        </div>
 
     </form>
 </body>
