--- a/src/main/resources/templates/comp-req-detail.html
+++ b/src/main/resources/templates/comp-req-detail.html
@@ -84,6 +84,18 @@
     
             </form>
 
+            <br>
+
+          </br>
+        
+            
+        
+            <div style="text-align: center;">
+              <button type="submit" value="Back" onclick="history.back()">Back</button>
+          </div>
+          </div>
+        
+
     </table>
     
 </body>
