--- a/src/main/resources/templates/createLeave.html
+++ b/src/main/resources/templates/createLeave.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/layout.html :: html_head" />
-<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">>    -->
 
 
 <style>
@@ -32,9 +31,15 @@
                         <tr>
                             <th>Start Date</th>
                                 <td><input type="date" id="takeLeaveStartDate" name= startDate th:field="*{startDate}" placeholder="Choose Start Date" />
-                                <script type="text/javascript">takeLeaveStartDate.min=new Date().toISOString().split("T")[0];</script></td>  
-                                <td><p style='color:red'><span th:if="${#fields.hasErrors('startDate')}" th:errors="*{startDate}"></span></p></td>
+                                <script type="text/javascript">takeLeaveStartDate.min=new Date().toISOString().split("T")[0];</script></td>                
                             </td>
+                        </tr>
+
+                        <tr>
+                            <td></td>
+                            <td style='color:red'><span th:if="${#fields.hasErrors('startDate')}" th:errors="*{startDate}"></span>
+                            </td>
+                          
                         </tr>
 
    
@@ -42,8 +47,15 @@
                             <th>End Date</th>
                             <td><input type="date" id="takeLeaveEndDate" name= endDate th:field="*{endDate}" class="form-control" placeholder="Choose End Date"/>
                                 <script type="text/javascript">takeLeaveEndDate.min=new Date().toISOString().split("T")[0];</script></td> 
+                        
+                        </tr>
+
+                        <tr>
+                            <td></td>
                             <td style='color:red'><span th:if="${#fields.hasErrors('endDate')}"
-                            th:errors="*{endDate}"></span>
+                                th:errors="*{endDate}"></span>
+                              </td>  
+
                         </tr>
 
 
@@ -62,23 +74,41 @@
                         <tr>
                             <th>Reason</th>
                             <td><textarea lass="form-control" name= reason th:field="*{reason}">Please Enter Your Reason</textarea></td> 
-                            <td style='color:red'><span th:if="${#fields.hasErrors('reason')}"
-                            th:errors="*{reason}"></span>
+                           
                         </tr>
 
+                        <tr>
+                            <td></td>
+                            <td style='color:red'><span th:if="${#fields.hasErrors('reason')}"
+                                th:errors="*{reason}"></span>
+                             </td>   
+
+                        </tr>
              
 
                         
                         <tr>
+                            <td></td>
                             <td>
                                 <button type="submit" class = "btn btn-primary btn-sm">Submit</button>
-                                <button type="reset" class = "btn btn-primary btn-sm">Reset</button>
                             </td>                      
+                        </tr>
+
+                        <tr>
+                            <td></td>
                         </tr>
 
 
                     </form>
                 </table>
+
+                <br>
+                </br>
+
+                <div style="text-align: center;">
+                    <button type="submit" value="Back" onclick="history.back()">Back</button>
+                </div>
+
                 </div>
             </div>
         </div>
