--- a/src/main/resources/templates/editClaimLeave.html
+++ b/src/main/resources/templates/editClaimLeave.html
@@ -36,28 +36,56 @@
             <tr>
                 <th>OT Start Time</th>
                 <td><input type="datetime-local" th:field="*{OTstartTime}" /></td>
-                <td th:if="${#fields.hasErrors('OTstartTime')}" th:errors="*{OTstartTime}"></td>
+                
+            </tr>
+
+            <tr>
+                <td></td>
+                <td style='color:red' th:if="${#fields.hasErrors('OTstartTime')}" th:errors="*{OTstartTime}"></td>
+
             </tr>
 
             <tr>
                 <th>OT End Time</th>
                 <td><input type="datetime-local" th:field="*{OTendTime}" /></td>
-                <td th:if="${#fields.hasErrors('OTendTime')}" th:errors="*{OTendTime}"></td>
+                
+            </tr>
+
+            <tr>
+                <td></td>
+                <td style='color:red' th:if="${#fields.hasErrors('OTendTime')}" th:errors="*{OTendTime}"></td>
+                
             </tr>
 
             <tr>
                 <th>Description</th>
                 <td><textarea maxlength="200" type="uText" th:field="*{description}" placeholder="Please write your description here"/></textarea>
-                <td th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></td>
+                
+            </tr>
+
+            <tr>
+                <td></td>
+                <td style='color:red' th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></td>
             </tr>
             
             <tr>
-                <td></td><td><button type="submit">Submit</button><button type="reset">Reset</button></td>
-            </td>
+                <td></td>
+                <td><button type="submit">Update</button></td>
+            </tr>
+            <tr>
+                <td></td>
+            </tr>
+            
             
         </table>
+
+        <br>
+        </br>
+
+        <div style="text-align: center;">
+            <button type="submit" value="Back" onclick="history.back()">Back</button>
+        </div>
 
     </form>
 </body>
 </html>
-
