--- a/src/main/resources/templates/editLeave.html
+++ b/src/main/resources/templates/editLeave.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="fragments/layout.html :: html_head" />
@@ -36,14 +36,24 @@
                                 <th> Start Date</th>
                                 <td><input type="date" id="editLeaveStartDate" name= startDate th:field="*{startDate}" class="form-control" placeholder="Choose Start Date" /></td>
                                 <script type="text/javascript">editLeaveStartDate.min=new Date().toISOString().split("T")[0];</script>
+                            
+                        </tr>
+
+                        <tr>
+                            <td></td>
                             <td style='color:red'><span th:if="${#fields.hasErrors('startDate')}" th:errors="*{startDate}"></span></td>
                         </tr>
 
                         <tr>
                                 <th> End Date</th>
                                 <td><input type="date" id="editLeaveEndDate" name= endDate th:field="*{endDate}" class="form-control" placeholder="Choose Start Date"/></td>
-                            <!-- <script type="text/javascript">editLeaveEndDate.min=new Date().toISOString().split("T")[0];</script> -->
+                            
+                        </tr>
+
+                        <tr>
+                            <td></td>
                             <td style='color:red'><span th:if="${#fields.hasErrors('endDate')}" th:errors="*{endDate}"></span></td>
+                            
                         </tr>
 
                         <tr>
@@ -59,16 +69,32 @@
                         <tr>                      
                             <th> Reason</th>
                                 <td><textarea th:field="*{reason}" rows= "5" cols="40" class="form-control"></textarea>
-                            </td>
-                            <td style='color:red' ><span th:if="${#fields.hasErrors('reason')}" th:errors="*{reason}" ></span>
-                            </td>
+                       
                         </tr>
 
                         <tr>
-                            <td></td><td><button type="submit">Submit</button></td>
+                            <td></td>
+                            <td style='color:red' ><span th:if="${#fields.hasErrors('reason')}" th:errors="*{reason}" ></span>
+                            </td>
+                            
+                        </tr>
+
+                        <tr>
+                            <td></td><td><button type="submit">Update</button></td>
+                        </tr>
+
+                        <tr>
+                            <td></td>
                         </tr>
                     </form>
                     </table>
+
+                    <br>
+                    </br>
+
+                    <div style="text-align: center;">
+                        <button type="submit" value="Back" onclick="history.back()">Back</button>
+                    </div>
                 </div>
             </div>
         </div>
