--- a/src/main/resources/templates/employee-edit.html
+++ b/src/main/resources/templates/employee-edit.html
@@ -1,39 +1,102 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
-<head>
+  <head th:replace="fragments/layout.html :: html_head" />
 <title> Employees</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
-integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
-crossorigin="anonymous">
+
+<style>
+
+  #main {
+    display: flex;
+    justify-content: center;
+    padding-top: 2%;
+  }
+    </style>
+
 </head>
 <body>
 	<div class="container">
-		<h2>Edit Employee</h2>
-		<hr/>
+
+    <div th:replace="fragments/layout.html :: header" />
+		<div th:replace="fragments/layout.html :: menu" />
+
+    <div id="main">
+			<h4>Edit Employee</h4>
+		</div>
+
+    <table class="table4">
 		<form th:action="@{/admin/employee/edit/'+employee.employeeId'}" th:object="${employee}" method="POST">
-			<input type="text" th:field="*{name}" class="form-control col-4 mb-4" placeholder="Enter Name" />
-            <span th:if="${#fields.hasErrors('name')}"
-            th:errors="*{name}"></span>
-            
-            <fieldset>
-                Manager : 
-                <select th:field="*{managerId}">
-                  <option value=""></option>
-                  <option th:each="manager : ${eidlist}" th:value="${manager}" th:text="${manager}">
-                    Manager
-                  </option>
-                </select>
-              </fieldset>
-              <br/>
-              Status:
-              <input type="text" th:field="*{status}" class="form-control col-4 mb-4" placeholder="Status">
-              
-              <br/>
-			<button class="btn btn-primary" type="submit">Save</button>
-			<button class="btn btn-dangerous" type="reset">Reset</button>
-			<input type="hidden" th:field="*{employeeId}"/>
+
+      <tr>  
+          <th>Employee Name</th>
+          <td>
+            <input type="text" th:field="*{name}" class="form-control col-4 mb-4" placeholder="Enter Name" />
+          </td>
+      </tr>
+
+      <tr>
+        <td></td>
+        <td style='color:red'>
+          <span th:if="${#fields.hasErrors('name')}"
+          th:errors="*{name}"></span>
+        </td>
+      </tr>
+
+      <tr>
+        <th>Manager </th>
+        <td>
+          <fieldset>
+            <select th:field="*{managerId}">
+              <option value=""></option>
+              <option th:each="manager : ${eidlist}" th:value="${manager}" th:text="${manager}">
+                Manager
+              </option>
+            </select>
+          </fieldset>
+        </td>
+      </tr>
+
+      <tr>
+        <th>Status </th>
+        <td>
+          <input type="text" th:field="*{status}" class="form-control col-4 mb-4" placeholder="Status">
+      </tr>
+
+      <tr>
+        <td></td>
+        <td style='color:red'>
+          <span th:if="${#fields.hasErrors('status')}"
+          th:errors="*{status}"></span>
+        </td>
+      </tr>
+			
+      <tr>
+        <td></td>
+        <td>
+          <button type="submit">Update</button>
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+          <input type="hidden" th:field="*{employeeId}"/>
+        </td>
+      </tr>
+
 		</form>
-		<hr/>
-		<a th:href="@{/admin/employee/list}">Back To List</a>
+    </table>
+
+    <br>
+
+  </br>
+	
+
+    <div style="text-align: center;">
+      <button type="submit" value="Back" onclick="history.back()">Back</button>
+  </div>
+
 	</div>
+
+  <div th:replace="fragments/layout.html :: footer" />
+
 </body>
 </html>
+
