--- a/src/main/resources/templates/employee-new.html
+++ b/src/main/resources/templates/employee-new.html
@@ -1,37 +1,86 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
-<head>
+  <head th:replace="fragments/layout.html :: html_head" />
 <title>Add Employees</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
-integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
-crossorigin="anonymous">
+
+
+<style>
+
+  #main {
+    display: flex;
+    justify-content: center;
+    padding-top: 2%;
+  }
+    </style>
+
 </head>
 <body>
 	<div class="container">
-		<h2>Add Employee</h2>
-		<hr/>
+
+    <div th:replace="fragments/layout.html :: header" />
+		<div th:replace="fragments/layout.html :: menu" />
+
+    <div id="main">
+			<h4>Add Employee</h4>
+		</div>
+
+    <table class="table4">
 		<form th:action="@{/admin/employee/create}" th:object="${employee}" method="POST">
-			<input type="text" th:field="*{name}" class="form-control col-4 mb-4" placeholder="Enter Name" />
-            <span th:if="${#fields.hasErrors('name')}"
-            th:errors="*{name}"></span>
-            
-            <fieldset>
-                Manager : 
-                <select th:field="*{managerId}">
-                  <option value=""></option>
-                  <option th:each="manager : ${eidlist}" th:value="${manager.getManagerId}" 
-                  th:text="${manager.getEmployeeId}+'.'+${manager.getName}">
-                    Manager
-                  </option>
-                </select>
-              </fieldset>
-              
-              <br/>
-			<button class="btn btn-primary" type="submit">Save</button>
-			<button class="btn btn-dangerous" type="reset">Reset</button>
-			<input type="hidden" th:field="*{employeeId}"/>
+			
+      <tr>
+        <th>Employee Name</th>
+        <td>
+          <input type="text" th:field="*{name}" class="form-control col-4 mb-4" placeholder="Enter Name" />
+        </td>
+      </tr>
+
+      <tr>
+        <td></td>
+        <td style='color:red'>
+          <span th:if="${#fields.hasErrors('name')}"
+          th:errors="*{name}"></span>
+        </td>
+      </tr>
+
+      <tr>
+        <th>  Manager</th>
+        <td>            
+          <fieldset>
+          
+            <select th:field="*{managerId}">
+              <option value=""></option>
+              <option th:each="manager : ${eidlist}" th:value="${manager.getManagerId}" 
+              th:text="${manager.getEmployeeId}+'.'+${manager.getName}">
+                Manager
+              </option>
+            </select>
+          </fieldset>
+        </td>
+      </tr>
+
+      <tr>    
+        <td></td>
+        <td style="text-align: center;">
+          <button type="submit">Submit</button>
+        </td>
+      </tr>
+      
+      <tr>
+        <td>
+          <input type="hidden" th:field="*{employeeId}"/>
+        </td>
+      </tr>			
+			
 		</form>
-		<hr/>
-		<a th:href="@{/admin/employee/list}">Back To List</a>
+    </table>
+    <br>
+
+  </br>
+
+		
+
+    <div style="text-align: center;">
+      <button type="submit" value="Back" onclick="history.back()">Back</button>
+  </div>
 	</div>
 </body>
 </html>
