--- a/src/main/resources/templates/holiday-edit.html
+++ b/src/main/resources/templates/holiday-edit.html
@@ -1,34 +1,90 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
-<head>
+	<head th:replace="fragments/layout.html :: html_head" />
 <title>Edit Public Holiday</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
-integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
-crossorigin="anonymous">
+
+<style>
+
+	#main {
+	  display: flex;
+	  justify-content: center;
+	  padding-top: 2%;
+	}
+	  </style>
+
 </head>
 <body>
 	<div class="container">
-		<h2>Edit Public Holiday</h2>
-		<hr/>
-		<form th:action="@{/admin/holidays/edit/} + ${holid.id}" th:object="${holid}" method="POST">
-			<input type="text" th:field="*{name}" class="form-control col-4 mb-4" 
-			placeholder="Enter  Name" readonly />
-            <span th:if="${#fields.hasErrors('name')}"
-            th:errors="*{localName}"></span>
-			<input type="text" th:field="*{localName}" class="form-control col-4 mb-4" placeholder="Enter Public Holiday Local Name" />
-            <span th:if="${#fields.hasErrors('localName')}"
-            th:errors="*{localName}"></span>
-			<input type="date" th:field="*{date}" class="form-control col-4 mb-4" placeholder="Enter Date" />
-            <span th:if="${#fields.hasErrors('date')}"
-            th:errors="*{date}"></span>
-            
 
-            <br/>
-			<button class="btn btn-primary" type="submit">Save</button>
-			<button class="btn btn-dangerous" type="reset">Reset</button>
+		<div th:replace="fragments/layout.html :: header" />
+		<div th:replace="fragments/layout.html :: menu" />
+
+		<div id="main">
+			<h4>Edit Public Holiday</h4>
+		</div>
+	
+		<table class="table4">
+		<form th:action="@{/admin/holidays/edit/} + ${holid.id}" th:object="${holid}" method="POST">
 			
+			<tr>
+				<th>Local Name</th>
+				<td><input type="text" th:field="*{name}" class="form-control col-4 mb-4" 
+					placeholder="Enter  Name" readonly /></td>
+			</tr>
+			
+			<tr>
+				<td></td>
+				<td style='color:red'>
+					<span th:if="${#fields.hasErrors('name')}"
+            		th:errors="*{localName}"></span>
+				</td>
+			</tr>
+            
+			<tr>
+				<th>Name</th>
+				<td>
+					<input type="text" th:field="*{localName}" class="form-control col-4 mb-4" placeholder="Enter Public Holiday Local Name" />
+				</td>
+				
+			</tr>
+
+			<tr>
+				<td></td>
+				<td style='color:red'>
+					<span th:if="${#fields.hasErrors('localName')}"
+					th:errors="*{localName}"></span>
+
+				</td>
+			</tr>
+
+			<tr>
+				<th>Holiday Date</th>
+				<td><input type="date" th:field="*{date}" class="form-control col-4 mb-4" placeholder="Enter Date" /></td>
+			</tr>
+
+			<tr>
+				<td></td>
+				<td style='color:red'>
+					<span th:if="${#fields.hasErrors('date')}"
+					th:errors="*{date}"></span>
+				</td>
+			</tr>
+			
+           <tr>
+			<td></td>
+			<td>
+				<button class="btn btn-primary" type="submit">Update</button>
+			</td>
+		   </tr>		
 		</form>
-		<hr/>
-		<a th:href="@{/admin/holidays/list}">Back To List</a>
+		</table>
+		<br>
+
+	</br>
+
+		<div style="text-align: center;">
+			<button type="submit" value="Back" onclick="history.back()">Back</button>
+		</div>
+		
 	</div>
 </body>
 </html>
