--- a/src/main/resources/templates/holiday-new.html
+++ b/src/main/resources/templates/holiday-new.html
@@ -1,37 +1,94 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
-<head>
-<title>Add Employees</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
-integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
-crossorigin="anonymous">
+	<head th:replace="fragments/layout.html :: html_head" />
+<title>Add Public Holiday</title>
+
+<style>
+
+	#main {
+	  display: flex;
+	  justify-content: center;
+	  padding-top: 2%;
+	}
+	  </style>
+
 </head>
 <body>
 	<div class="container">
-		<h2>Add Public Holiday</h2>
-		<hr/>
+
+		<div th:replace="fragments/layout.html :: header" />
+		<div th:replace="fragments/layout.html :: menu" />
+
+		<div id="main">
+			<h4>Add Public Holiday</h4>
+		</div>
+
+		<table class="table4">
 		<form th:action="@{/admin/holidays/create}" th:object="${pubs}" method="POST">
-			<input type="text" th:field="*{LocalName}" class="form-control col-4 mb-4" 
-			placeholder="Enter Local Name" />
-            <span th:if="${#fields.hasErrors('localName')}"
-            th:errors="*{localName}"></span>
+			<tr>
+				<th>Local Name</th>
+				<td>
+					<input type="text" th:field="*{LocalName}" class="form-control col-4 mb-4" 
+					placeholder="Enter Local Name" />
+				</td>
+			</tr>
 
-			<input type="text" th:field="*{name}" class="form-control col-4 mb-4" 
-			placeholder="Enter Public Holiday Name" />
-            <span th:if="${#fields.hasErrors('name')}"
-            th:errors="*{name}"></span>
+			<tr>
+				<td></td>
+				<td style='color:red'>
+					<span th:if="${#fields.hasErrors('localName')}"
+            		th:errors="*{localName}"></span>
+				</td>
+			</tr>
+			
+            <tr>
+				<th>Name</th>
+				<td>
+					<input type="text" th:field="*{name}" class="form-control col-4 mb-4" 
+					placeholder="Enter Public Holiday Name" />
+				</td>
+			</tr>
 
-			<input type="date" th:field="*{date}" class="form-control col-4 mb-4" 
-			placeholder="Enter Public Holiday Name" />
-            <span th:if="${#fields.hasErrors('date')}"
-            th:errors="*{date}"></span>
-            
-              <br/>
-			<button class="btn btn-primary" type="submit">Save</button>
-			<button class="btn btn-dangerous" type="reset">Reset</button>
+			<tr>
+				<td></td>
+				<td style='color:red'>
+					<span th:if="${#fields.hasErrors('name')}"
+					th:errors="*{name}"></span>
+				</td>
+			</tr>
+
+			<tr>
+				<th>Holiday Date</th>
+				<td>
+					<input type="date" th:field="*{date}" class="form-control col-4 mb-4" 
+					placeholder="Enter Public Holiday Name" />
+				</td>
+			</tr>
+
+			<tr>
+				<td></td>
+				<td style='color:red'>
+					<span th:if="${#fields.hasErrors('date')}"
+					th:errors="*{date}"></span>
+				</td>
+			</tr>
+
+			<tr>
+				<td></td>
+				<td>
+					<button type="submit">Submit</button>
+				</td>
+			</tr>		
 			
 		</form>
-		<hr/>
-		<a th:href="@{/admin/holidays/list}">Back To List</a>
+		</table>
+		<br>
+
+	</br>
+
+		<div style="text-align: center;">
+			<button type="submit" value="Back" onclick="history.back()">Back</button>
+		</div>
 	</div>
+
 </body>
 </html>
