--- a/src/main/resources/templates/leaveDetail.html
+++ b/src/main/resources/templates/leaveDetail.html
@@ -64,7 +64,7 @@
 </br>
 
         <div style="text-align: center;">
-            <button type="submit" value="Back" onclick="history.back()">Return to Leave History</button>
+            <button type="submit" value="Back" onclick="history.back()">Back</button>
         </div>
     
    
