--- a/src/main/resources/templates/leavetype-new.html
+++ b/src/main/resources/templates/leavetype-new.html
@@ -1,40 +1,95 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
-<head>
-<title>Add Employees</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
-integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
-crossorigin="anonymous">
+	<head th:replace="fragments/layout.html :: html_head" />
+<title>Add LeaveType</title>
+
+<style>
+
+    #main {
+      display: flex;
+      justify-content: center;
+      padding-top: 2%;
+    }
+      </style>
+
 </head>
 <body>
 	<div class="container">
-		<h2>Add LeaveType</h2>
-		<hr/>
+
+		<div th:replace="fragments/layout.html :: header" />
+		<div th:replace="fragments/layout.html :: menu" />
+		
+		<div id="main">
+			<h4>Add Leave Type</h4>
+		</div>
+
+		<table class="table4">
 		<form th:action="@{/admin/leavetype/create}" th:object="${leaveType}" method="POST">
-			<input type="text" th:field="*{leaveTypeName}" class="form-control col-4 mb-4" 
-			placeholder="Enter Name" />
-            <span th:if="${#fields.hasErrors('leaveTypeName')}"
-            th:errors="*{leaveTypeName}"></span>
 
-			<input type="number" th:field="*{leavePeriod}" class="form-control col-4 mb-4" 
-			placeholder="Enter Period" />
-            <span th:if="${#fields.hasErrors('leavePeriod')}"
-            th:errors="*{leavePeriod}"></span>
+			<tr>
+				<th>Leave Type Name</th>
+				<td>			
+					<input type="text" th:field="*{leaveTypeName}" class="form-control col-4 mb-4" 
+					placeholder="Enter Name" />
+				</td>
+			</tr>
 
-			<input type="text" th:field="*{description}" class="form-control col-4 mb-4" 
-			placeholder="Enter Description" />
-            <span th:if="${#fields.hasErrors('description')}"
-            th:errors="*{description}"></span>
-            
-            
-              
-              <br/>
-			<button class="btn btn-primary" type="submit">Save</button>
-			<button class="btn btn-dangerous" type="reset">Reset</button>
-			
+			<tr>
+				<td></td>
+				<td style='color:red'>
+					<span th:if="${#fields.hasErrors('leaveTypeName')}"
+					th:errors="*{leaveTypeName}"></span>
+				</td>
+			</tr>
+
+			<tr>
+				<th>Leave Period</th>
+				<td>
+					<input type="number" th:field="*{leavePeriod}" class="form-control col-4 mb-4" 
+					placeholder="Enter Period" />
+				</td>
+			</tr>
+
+			<tr>
+				<td></td>
+				<td style='color:red'>
+					<span th:if="${#fields.hasErrors('leavePeriod')}"
+					th:errors="*{leavePeriod}"></span>
+				</td>
+			</tr>
+          
+
+			<tr>
+				<th>Description</th>
+				<td>
+					<input type="text" th:field="*{description}" class="form-control col-4 mb-4" 
+					placeholder="Enter Description" />
+				</td>
+			</tr>
+
+			<tr>
+				<td></td>
+				<td style='color:red'>
+					<span th:if="${#fields.hasErrors('description')}"
+					th:errors="*{description}"></span>
+				</td>
+			</tr>
+	
+			<tr>
+				<td></td>
+				<td>
+					<button type="submit">Submit</button>
+				</td>
+			</tr>			
 			
 		</form>
-		<hr/>
-		<a th:href="@{/admin/leavetype/list}">Back To List</a>
+		</table>
+		
+		<div style="text-align: center;">
+            <button type="submit" value="Back" onclick="history.back()">Back</button>
+        </div>
+
 	</div>
+
+	<div th:replace="fragments/layout.html :: footer" />
 </body>
 </html>
