--- a/src/main/resources/templates/manager-leave-detail.html
+++ b/src/main/resources/templates/manager-leave-detail.html
@@ -125,6 +125,18 @@
                 </td>
               </tr>
           </table>
+
+          <br>
+
+        </br>
+      
+          
+      
+          <div style="text-align: center;">
+            <button type="submit" value="Back" onclick="history.back()">Back</button>
+        </div>
+        </div>
+      
       </div>
 
 </body>
