--- a/src/main/resources/templates/outOfLeave.html
+++ b/src/main/resources/templates/outOfLeave.html
@@ -15,7 +15,7 @@
 
 
     <div style="text-align: center;">
-        <button type="submit" value="Back" onclick="history.back()">Return to Form</button>
+        <button type="submit" value="Back" onclick="history.back()">Back</button>
     </div>
 
 </body>
