--- a/src/main/resources/templates/user-edit.html
+++ b/src/main/resources/templates/user-edit.html
@@ -1,43 +1,69 @@
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
-<head>
-<title>Edit Employees</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
-integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
-crossorigin="anonymous">
-</head>
-<body>
-	<div class="container">
-		<h2>Edit Employee</h2>
-		<hr/>
-		<form th:action="@{/admin/user/edit/'+user.userId'}" th:object="${user}" method="POST">
-			<input type="text" th:field="*{username}" class="form-control col-4 mb-4" placeholder="Enter UserName" />
-            <span th:if="${#fields.hasErrors('username')}"
-            th:errors="*{username}"></span>
-			<input type="text" th:field="*{password}" class="form-control col-4 mb-4" placeholder="Enter Password" />
-            <span th:if="${#fields.hasErrors('password')}"
-            th:errors="*{password}"></span>
-			<input type="date" th:field="*{joinDate}" class="form-control col-4 mb-4" 
-            placeholder="Select JoinDate"  readonly/>
-            <span th:if="${#fields.hasErrors('joinDate')}"
-            th:errors="*{joinDate}"></span>
-            <label>Emp: </label>
-                <input th:each="emp:${user.employee}" th:value="${emp.employeeId}" readonly/>
-              <div></div>
-              <label >User roles (multiple select):</label>
-            <select size="3" multiple="multiple" name="roleSet" id="roleSet">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
+<head th:replace="fragments/layout.html :: html_head" />
+<div th:replace="fragments/layout.html :: menu" />
+<style>
+
+    #main {
+      display: flex;
+      justify-content: center;
+      padding-top: 2%;
+    }
+</style>
+    <div id="main">
+    <h4>Edit User</h4>
+    </div>
+                
+    <table class = "table4">
+		<form th:action="@{/admin/user/edit/}+${user.userId}" th:object="${user}" method="POST">
+      <tr>
+        <th>Username</th>
+			<td><input type="text" th:field="*{username}" class="form-control col-4 mb-4" placeholder="Enter Username" /></td>
+      <td style='color:red'><span th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></span></td>
+      </tr>
+
+      <tr>
+      <th>Password</th>
+			<td><input type="text" th:field="*{password}" class="form-control col-4 mb-4" placeholder="Enter Password" /></td>
+      <td style='color:red'><span th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span></td>
+			</tr>
+
+      <tr>
+      <th>Join Date</th>
+      <td><input type="date" th:field="*{joinDate}" class="form-control col-4 mb-4" placeholder="Select JoinDate"  readonly/>
+        <td style='color:red'><span th:if="${#fields.hasErrors('joinDate')}"th:errors="*{joinDate}"></span></td>
+      </tr>
+      <tr>
+       <th>Employee Id</th>
+       <td><input th:each="emp:${user.employee}" th:value="${emp.employeeId}" readonly/></td>
+      </tr>
+      <tr>
+        <th>User Roles (multiple selection)</th>
+          <td><select size="3" multiple="multiple" name="roleSet" id="roleSet">
               <option th:each="role:${allRoles}" 
               th:value="${role.roleId}" 
               th:text="${role.roleName}"
               th:selected ="${user.roles.contains(role)}">Roles</option>
-            </select>
+            </select></td>
 
-            <br/>
-			<button class="btn btn-primary" type="submit">Save</button>
-			<button class="btn btn-dangerous" type="reset">Reset</button>
-			<input type="hidden" th:field="*{userId}"/>
+            <tr>
+              <td></td><td><button type="submit">Submit</button></td>
+          </tr>
 		</form>
-		<hr/>
-		<a th:href="@{/admin/user/list}">Back To List</a>
-	</div>
+
+  </table>
+
+  <br>
+
+</br>
+
+      <div style="text-align: center;">
+          <button type="submit" value="Back" onclick="history.back()">Back</button>
+      </div>
+  
+ 
+
+  <div th:replace="fragments/layout.html :: footer" />
 </body>
 </html>
