--- a/src/main/resources/templates/user-new.html
+++ b/src/main/resources/templates/user-new.html
@@ -1,42 +1,87 @@
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
-<head>
-<title>Add User</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
-integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
-crossorigin="anonymous">
-</head>
-<body>
-	<div class="container">
-		<h2>Add User</h2>
-		<hr/>
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
+<head th:replace="fragments/layout.html :: html_head" />
+<div th:replace="fragments/layout.html :: menu" />
+<style>
+
+    #main {
+      display: flex;
+      justify-content: center;
+      padding-top: 2%;
+    }
+</style>
+    <div id="main">
+    <h4>Add User</h4>
+    </div>
+                
+    <table class = "table4">
 		<form th:action="@{/admin/user/create}" th:object="${user}" method="POST">
-			<input type="text" th:field="*{username}" class="form-control col-4 mb-4" placeholder="Enter UserName" />
-            <span th:if="${#fields.hasErrors('username')}"
-            th:errors="*{username}"></span>
-			<input type="text" th:field="*{password}" class="form-control col-4 mb-4" placeholder="Enter Password" />
-            <span th:if="${#fields.hasErrors('password')}"
-            th:errors="*{password}"></span>
-			<input type="date" th:field="*{joinDate}" class="form-control col-4 mb-4" placeholder="Select JoinDate" />
-            <span th:if="${#fields.hasErrors('joinDate')}"
-            th:errors="*{joinDate}"></span>
-            <label th:for="*{employee}">Emp: </label>
-            <select th:field="*{employee}">
+      <tr>
+        <th>Username</th>
+			<td><input type="text" th:field="*{username}" class="form-control col-4 mb-4" placeholder="Enter Username" /></td>
+      
+      </tr>
+      <tr>
+        <td></td>
+        <td style='color:red'>
+          <span th:if="${#fields.hasErrors('username')}"
+          th:errors="*{username}"></span>
+        </td>
+      </tr>
+
+        <th>Password</th>
+        <td><input type="text" th:field="*{password}" class="form-control col-4 mb-4" placeholder="Enter Password" /></td>
+        
+      </tr>
+      <tr>
+        <td></td>
+        <td style='color:red'>
+          <span th:if="${#fields.hasErrors('password')}"
+          th:errors="*{password}"></span>
+        </td>
+      </tr>
+      <tr>
+        <th>Join Date</th>
+			<td><input type="date" th:field="*{joinDate}" class="form-control col-4 mb-4" placeholder="Select JoinDate" /></td>
+     </tr>
+     <tr>
+      <td></td>
+      <td style='color:red'>
+        <span th:if="${#fields.hasErrors('joinDate')}"
+        th:errors="*{joinDate}"></span>
+      </td>
+    </tr>
+      <tr>
+        <th>Employee Id</th>
+            <td><select th:field="*{employee}">
                 <option th:each="emp : ${eidlist}" th:value="${emp.employeeId}" th:text="${emp.employeeId}">
                   selectOption</option>
-              </select>
-              <div></div>
-              <label for="roles">User roles (multiple select):</label>
-            <select size="3" multiple="multiple" name="roles" id="roles">
+              </select></td>
+      </tr>
+      <th>User Roles (multiple selection)</th>
+          <td><select size="3" multiple="multiple" name="roles" id="roles">
               <option th:each="role:${roles}" th:value="${role.roleId}" th:text="${role.roleName}">Roles</option>
-            </select>
+            </select></td>
 
-            <br/>
-			<button class="btn btn-primary" type="submit">Save</button>
-			<button class="btn btn-dangerous" type="reset">Reset</button>
-			<input type="hidden" th:field="*{userId}"/>
+            <tr>
+              <td></td><td><button type="submit">Submit</button></td>
+          </tr>
 		</form>
-		<hr/>
-		<a th:href="@{/admin/user/list}">Back To List</a>
-	</div>
+
+  </table>
+
+  <br>
+
+</br>
+
+      <div style="text-align: center;">
+          <button type="submit" value="Back" onclick="history.back()">Back</button>
+      </div>
+  
+ 
+
+  <div th:replace="fragments/layout.html :: footer" />
 </body>
 </html>
+
