--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -35,7 +35,7 @@
                     <button class="subnavbtn">Staff Menu <i class="fa fa-caret-down"></i></button>
                     <div class="subnav-content">
                         <a th:href="@{/staff/leave/new }">Apply Leave</a>
-                        <a th:href="@{/staff/compensation/claimLeave }">Apply Compensation Leave</a>
+                        <a th:href="@{/staff/compensation/claimLeave }">Apply Compensation Claim</a>
                         <a th:href="@{/staff/viewLeave }">Leave & Claim History</a>
                     </div>
                 </div>
