--- a/src/main/resources/templates/mgr-pending-approval.html
+++ b/src/main/resources/templates/mgr-pending-approval.html
@@ -55,7 +55,7 @@
             </div>
             <div id = "content2">
                 <div>
-                    <h4>Compensation Claims</h4>
+                    <h4>Pending Compensation Claims</h4>
                 </div>
                 
                 <div th:if="${#lists.isEmpty(compRequests)}">
