--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -122,7 +122,7 @@ ul li a:visited {
 }
 
 ul li a:hover, ul li  {
-    color: white;
+    color: #338;
     /* background-color: #338      ; */
 }
 
