--- a/src/main/resources/templates/user-list.html
+++ b/src/main/resources/templates/user-list.html
@@ -48,7 +48,7 @@
           <td th:text="${user.JoinDate}"></td>
 
           <td><a th:href="@{/admin/user/edit/}+${user.userId}"><i class="fa fa-pencil" style="font-size:18px"></i></span></a>
-          <a th:href="@{/admin/user/delete/}+${user.userId}"><i class="fa fa-trash-o" style="font-size:18px"></i></span></a></td>
+          <!-- <a th:href="@{/admin/user/delete/}+${user.userId}"><i class="fa fa-trash-o" style="font-size:18px"></i></span></a></td> -->
         </tr>
       </tbody>
     </table>
