--- a/src/main/resources/templates/leavetype-list.html
+++ b/src/main/resources/templates/leavetype-list.html
@@ -10,7 +10,7 @@
     <div class = "tabinator">
         <input type = "radio" id = "tab1" name = "tabs" checked>
         <label for = "tab1">Leave Type List</label>
-        <label for = "tab2"><a th:href="@{/admin/leavetype/create}">Apply Leave Type</span></a></label>
+        <label for = "tab2"><a th:href="@{/admin/leavetype/create}">Add Leave Type</span></a></label>
         <label for = "tab3"><a th:href="@{/admin/leavetype/export/csv}">Generate Report</span></a></label>
         <div id = "content1">
           <div>
