--- a/src/main/resources/templates/outOfLeave.html
+++ b/src/main/resources/templates/outOfLeave.html
@@ -10,8 +10,22 @@
 
         <h5><b>Insufficient Leave</b></h5>
         <h5>You don't have enough balance leaves for this duration.</h5>
-        <h5>Please resubmit with your available leave balance.</h5>
-
+        <h5>Please resubmit with your available leave balance:</h5>
+        <table th:object ="${leaveBalance}" style="margin-left: auto; margin-right: auto; font-size: 20px;">
+            <tr>
+                <td style="text-align: right;">Annual Leave Balance: </td>
+                <td th:utext = "*{balanceAnnualLeaveDays}"></td>
+            </tr>
+            <tr>
+                <td style="text-align: right;">Medical Leave Balance: </td>
+                <td th:utext = "*{balanceMedicalLeaveDays}"></td>
+            </tr>
+            <tr>
+                <td style="text-align: right;">Compensation Leave Balance: </td>
+                <td th:utext = "*{balanceCompensationLeaveDays}"></td>
+            </tr>
+        </table>
+        <br><br><br>
 
 
     <div style="text-align: center;">
